Fix alignment of 'TS', 'DS' text in bank inventory

--- a/src/modules/bank.css
+++ b/src/modules/bank.css
@@ -19,6 +19,8 @@ form[name="bank"] a {
     margin-left: 5px;
 }
 
+/* Format 'TS', 'DS' text */
+
 form[name="bank"] span[style="font-size: .8em;"] {
     font-size: 0 !important;
 }
@@ -35,7 +37,6 @@ form[name="bank"] span[style="font-size: .8em;"] span {
     display: inline-block;
     padding: 0;
     line-height: 20px;
-    padding-right: 1px;
     text-align: center;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2) inset;
     font-weight: bold;
